# Sapphire-Engine

./: .gitignore  CMakeLists.txt  README.md
Game/: main.c
ZMath/: AABB.h  Point.h  Polar.h  Vector.h  ZMath.h  ZMath_Polar.h  ZMath_Rectangle.h  angle.h
script/: _bullet_boss3_1.unf  _bullet_boss3_3.unf  _bullet_boss4_1.unf  _bullet_boss4_7_abcdef.unf  _bullet_boss4_8_b_calculateAngle.unf  _bullet_boss4_8_bcde.unf  _bullet_boss4_9.unf  _bullet_boss4_9_segmentsBeforeSpawner.unf  _danmaku_boss2_3_outwardSpeed.unf  _danmaku_boss2_5_angleVel.unf  _danmaku_boss2_5_outbound.unf  _danmaku_boss2_6_outbound.unf  _danmaku_boss4_5_angleShift.unf  _danmaku_boss4_5_secsBetweenLasers.unf  _danmaku_boss4_5_segmentsBeforeSpawner.unf  _danmaku_boss4_5_symmetry.unf  _danmaku_enemy_3_8_angleVel.unf  _danmaku_enemy_3_8_baseSpeed.unf  _danmaku_enemy_3_8_colCount.unf  _danmaku_enemy_3_8_colInc.unf  _danmaku_enemy_3_8_maxSecs.unf  _danmaku_enemy_3_8_secsBetweenShots.unf  _danmaku_enemy_3_8_symmetry.unf  _enemy_3_2.unf  _enemy_3_7.unf  _enemy_3_8.unf  _enemy_4_3.unf  _laser_boss4_8_lifetimeSecs.unf  _laser_boss4_9_lifetimeSecs.unf  add_bomb.un  add_life.un  arc.unf  attack_boss1_1.un  attack_boss1_2.un  attack_boss1_3.un  attack_boss1_4.un  attack_boss2_1.un  attack_boss2_2.un  attack_boss2_3.un  attack_boss2_4.un  (+359 more)
source/AAAgame/: Animation.c  Animation.h  CollisionCommand.h  CollisionType.h  Components.c  Components.h  Config.h  DeathCommand.h  Dialogue.c  Dialogue.h  Game.c  Game.h  GameBuilderCommand.h  GameBuilderSystem.c  GameCommand.h  GameLoop.c  GameLoop.h  GameState.h  MenuCommand.h  MenuNavigationCommand.h  PlayerData.h  Resources.c  Resources.h  SceneRenderer.c  SceneRenderer.h  SceneUpdater.c  SceneUpdater.h  Scenes.c  Scenes.h  Scripts.c  Scripts.h  Settings.c  Settings.h  main.c
source/AAAgame/Systems/: AnimationSystem.c  AnimationSystem.h  ButtonSpriteSystem.c  ButtonSpriteSystem.h  ClearSystem.c  ClearSystem.h  CollisionDetectionSystem.c  CollisionDetectionSystem.h  CollisionHandlerSystem.c  CollisionHandlerSystem.h  ContinueSystem.c  ContinueSystem.h  CreditsSystem.c  CreditsSystem.h  DeathHandlerSystem.c  DeathHandlerSystem.h  DialogueSystem.c  DialogueSystem.h  EntityBuilder.h  GameBuilderSystem.h  GameOverSystem.c  GameOverSystem.h  InboundSystem.c  InboundSystem.h  InitSystem.c  InitSystem.h  InputSystem.c  InputSystem.h  LoadingScreenSystem.c  LoadingScreenSystem.h  MenuNavigationSystem.c  MenuNavigationSystem.h  MessageCleanupSystem.c  MessageCleanupSystem.h  NativeFuncs.c  NativeFuncs.h  OutboundSystem.c  OutboundSystem.h  OverlaySystem.c  OverlaySystem.h  (+40 more)
source/BLoader/: BLoader.h  BLoader_ResourceLoader.c  BLoader_ResourceLoader.h
source/Constructure/: Constructure.c  Constructure.h  Constructure_Array.c  Constructure_Array.h  Constructure_ArrayList.c  Constructure_ArrayList.h  Constructure_Bitset.c  Constructure_Bitset.h  Constructure_CommonHashFuncs.c  Constructure_CommonHashFuncs.h  Constructure_HashMap.c  Constructure_HashMap.h  Constructure_SparseSet.c  Constructure_SparseSet.h  Constructure_String.c  Constructure_String.h
source/MokyoMidi/: MokyoMidi.h  MokyoMidi_Constants.c  MokyoMidi_Constants.h  MokyoMidi_MidiHub.c  MokyoMidi_MidiHub.h  MokyoMidi_MidiOut.c  MokyoMidi_MidiOut.h  MokyoMidi_MidiSequence.c  MokyoMidi_MidiSequence.h  MokyoMidi_MidiSequencer.c  MokyoMidi_MidiSequencer.h
source/Necro/: Necro.h  Necro_Compiler.c  Necro_Compiler.h  Necro_Instruction.h  Necro_Lexer.c  Necro_Lexer.h  Necro_Literals.c  Necro_Literals.h  Necro_NativeFuncSet.c  Necro_NativeFuncSet.h  Necro_Object.c  Necro_Object.h  Necro_Program.c  Necro_Program.h  Necro_Token.h  Necro_Value.c  Necro_Value.h  Necro_VirtualMachine.c  Necro_VirtualMachine.h
source/PGUtil/: PGUtil.c  PGUtil.h  PGUtil_Alloc.c  PGUtil_Alloc.h  PGUtil_Error.c  PGUtil_Error.h
source/Trifecta/: Trifecta.h  Trifecta_Concurrency.c  Trifecta_Concurrency.h  Trifecta_Directory.c  Trifecta_Directory.h  Trifecta_GlyphMap.c  Trifecta_GlyphMap.h  Trifecta_Input.c  Trifecta_Input.h  Trifecta_Sprite.c  Trifecta_Sprite.h  Trifecta_Time.c  Trifecta_Time.h  Trifecta_Uchar.h  Trifecta_Win32.h  Trifecta_Window.c  Trifecta_Window.h  _Trifecta_Graphics.c  _Trifecta_Graphics.h  _Trifecta_Shaders.c  _Trifecta_Shaders.h
source/Unknown/: Unknown.h  Unknown_Compiler.c  Unknown_Compiler.h  Unknown_Instructions.h  Unknown_Lexer.c  Unknown_Lexer.h  Unknown_Literals.c  Unknown_Literals.h  Unknown_NativeFuncSet.c  Unknown_NativeFuncSet.h  Unknown_Object.c  Unknown_Object.h  Unknown_Program.c  Unknown_Program.h  Unknown_UserFuncSet.c  Unknown_UserFuncSet.h  Unknown_Value.c  Unknown_Value.h  Unknown_VirtualMachine.c  Unknown_VirtualMachine.h  test.c
source/Vecs/: Vecs.h  Vecs_Component.h  Vecs_ComponentList.c  Vecs_ComponentList.h  Vecs_ComponentMetadata.c  Vecs_ComponentMetadata.h  Vecs_Entity.h  Vecs_EntityMetadata.c  Vecs_EntityMetadata.h  Vecs_Query.c  Vecs_Query.h  Vecs_World.c  Vecs_World.h  _Vecs_Archetype.c  _Vecs_Archetype.h  _Vecs_EntityList.c  _Vecs_EntityList.h  _Vecs_EntityMetadata.c  _Vecs_EntityMetadata.h
source/WindECS/: WindECS.h  WindECS_Components.c  WindECS_Components.h  WindECS_Entity.h  WindECS_Query.c  WindECS_Query.h  WindECS_World.c  WindECS_World.h  _WindECS_Archetype.c  _WindECS_Archetype.h  _WindECS_Entities.c  _WindECS_Entities.h
source/ZMath/: ZMath.c  ZMath.h  ZMath_AABB.c  ZMath_AABB.h  ZMath_Angle.c  ZMath_Angle.h  ZMath_Bitwise.c  ZMath_Bitwise.h  ZMath_Constants.c  ZMath_Constants.h  ZMath_MT.c  ZMath_MT.h  ZMath_Matrix4x4  ZMath_Matrix4x4.c  ZMath_Matrix4x4.h  ZMath_Numeric.c  ZMath_Numeric.h  ZMath_Point.c  ZMath_Point.h  ZMath_Point2D.c  ZMath_Point2D.h  ZMath_Polar.c  ZMath_Polar.h  ZMath_Rectangle.h  ZMath_Vector.c  ZMath_Vector.h  ZMath_Vector2D.c  ZMath_Vector2D.h
source/game/: main.c
